<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_border"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/border_horizontal"
        android:layout_marginRight="@dimen/border_horizontal"
        android:layout_marginTop="@dimen/boder_vertical"
        android:background="@drawable/attribute" >

        <ImageView
            android:id="@+id/role_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/circlefriends_back_arrow" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/running"
            android:textColor="#ffffff"
            android:textSize="20sp" />



        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/iv_circlefriends_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="34dp"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/stop_run_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/stop_running"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/boder_vertical"
            android:layout_marginLeft="@dimen/border_horizontal"
            android:layout_marginRight="@dimen/border_horizontal"
            android:layout_weight="1.5"
            android:background="@drawable/bg"
            android:gravity="center"
            android:orientation="horizontal" >

            

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/distance_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zeroPzero"
                    android:textSize="40sp"
                    android:gravity="center" 
                    />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance" 
                    android:layout_gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/boder_vertical"
                android:layout_marginLeft="@dimen/border_horizontal"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/step_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/setp_count" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/boder_vertical"
                android:layout_marginLeft="@dimen/border_horizontal"
                android:layout_marginRight="@dimen/border_horizontal"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/velocity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/velocity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/velocity" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/boder_vertical"
                android:layout_marginLeft="@dimen/border_horizontal"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/calory_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calorie" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/boder_vertical"
                android:layout_marginLeft="@dimen/border_horizontal"
                android:layout_marginRight="@dimen/border_horizontal"
                android:layout_weight="1"
                android:background="@drawable/bg"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <com.baidu.mapapi.map.MapView
            android:id="@+id/bmapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/boder_vertical"
            android:layout_marginLeft="@dimen/border_horizontal"
            android:layout_marginRight="@dimen/border_horizontal"
            android:clickable="true" />

        <!--
             <ImageButton
            android:id="@+id/run_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/bmapView"
            android:layout_alignLeft="@+id/bmapView"
            android:layout_marginLeft="63dp"
            android:background="@drawable/run_up" /> -->
        

    </RelativeLayout>

</LinearLayout>